Combined header and container1 to fix white space issue betwen the two divs. Rounded out the signup button. fixed the spacing between the image place holder and the Intro text

--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: "Roboto", 'Times New Roman', Times, serif;
 }
 
 /* For header */
 
 .header {
-    font-family: Roboto, 'Times New Roman', Times, serif;
+    
     background-color: #1f2937;
     color: white;
     display: flex;
@@ -44,8 +45,8 @@ h4 {
     background-color: #1f2937;
     color: white;
     display: flex;
-    justify-content: space-around;
-    padding: 40px 150px;
+    align-items: center;
+    padding: 50px 150px;
     margin-top: 0;
 
 }
@@ -56,21 +57,29 @@ h1 {
     color: #f9faf8;
 }
 
+.intro{
+    width: 50%;
+    padding-right: 30px;
+}
 .intro p {
     font-size: 18px;
     color: #e5e7eb;
+    word-wrap: normal;
 }
 
 .imgBox {
-    width: 300px;
+    width: 50%;
     height: 200px;
     border: 1px solid white;
-    flex-shrink: 0;
+  
 }
 
+/* button */
 .signUp {
     background-color: #3882F6;
     color: white;
+    padding: 7px 20px;
+    border-radius: 8px;
 }
 
 
@@ -155,7 +164,3 @@ blockquote {
 }
 
 
-/* General changes to page outline */
-.header, .container1, .container2, .container3, .container4 {
-    
-}
